# haskell

./: .gitignore
1/: README.md  pokrasko-hw1.cabal  stack.yaml
1/app/: Main.hs
1/src/: Battle.hs  Folding.hs  Monoid.hs  Nat.hs  OneLiner.hs  PatternMatching.hs  Tree.hs  TreePrinters.hs  Vector.hs  Weekday.hs
2/: README.md  cabal.config  pokrasko-hw2.cabal
2/src/: ChaoticGood.hs  EExpr.hs  Error.hs  Expr.hs  Fish.hs  MonadParser.hs  Nondeterministic.hs  Parser.hs  ParserCombinators.hs  Partial.hs  SParser.hs  Tree.hs
